all element, colours and styles added. Need to fix scaling issues for all sections and also footer positionng and footer children wrapping

--- a/style.css
+++ b/style.css
@@ -1,19 +1,16 @@
 *{
     box-sizing: border-box;
-    font-size: 10px;
+  
 }
 
 /*Body*/
 
 body{
-    border: 1px solid black;
-    min-height: 100vh;
-    
+    min-height: 90vh;
     display: flex;
     flex-direction: column;
 }
  
-
 
 
 
@@ -27,7 +24,7 @@ header{
     justify-content: flex-end;
     font-family: 'Akaya Telivigala', cursive;
     margin-top: 15px;
-    border: 1px solid red;
+ 
 }
 
 .header-child{
@@ -41,12 +38,7 @@ header{
     margin-right: auto;
 }
 
-#spacer{
-    width: 15%;
-    border: 1px solid black;
-}
-
-.header-a:hover{
+a:hover{
     text-decoration: underline;
 }
 
@@ -54,7 +46,7 @@ header{
     margin: 5px;
 }
 
-.header-a{
+a{
     text-decoration: none;
 }
 
@@ -85,7 +77,7 @@ header{
     flex-direction: column;
     max-width: 600px;
     min-width: 250px;
-    margin: 30px auto;
+    margin: 7% auto;
     
 }
 
@@ -112,7 +104,7 @@ header{
 }
 
 #m-flex-2{
-    width: 70%;
+    width: 100%;
     min-width: 248px;
     border-radius: 20px;
     height: 25px;
@@ -162,12 +154,18 @@ header{
 /*Footer*/
 
 footer{
-    border: 1px solid orange;
     margin-top: auto;
-}
+    background-color:   rgba(125, 122, 240, 0.3);
+    min-width: 100vw;
+    min-height: auto;
+    display:  inline;
+    position: fixed;
+    bottom: 0;
+    font-family: 'Akaya Telivigala', cursive;
 
+}
 .footer-child{
-    border: 1px solid black;
+    height: 5vh;
 }
 
 #f-child-p-1{
@@ -184,7 +182,8 @@ footer{
 }
 
 .f-child-2-c{
-    border: 1px solid red;
+    min-height: 100%;
+    
 }
 
 #f-child-2-c-1,
@@ -202,14 +201,32 @@ footer{
     height: 10px;
 }
 
+@media screen and (max-width: 880px){
+    .f-child-2-c {
+        width: 100%;
+        text-align: center;
+        justify-content: center;
+    }
 
-/* #f-child-2-c-1{
-    order: 1;
+    #f-child-1{
+        text-align: center;
+    }
+
+    header{
+        justify-content: center;
+
+    }
+ 
 }
 
-#f-child-2-c-3{
-    order: 2;
-} */
+@media screen and (max-width: 450px){
+    #f-child-2-c-1,
+    #f-child-2-c-3{
+    
+        flex-direction: column;
+    }
+}
+
 
 .f-child-a{
     padding: 10px;
